--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,24 @@ swarm/losses/out-worker-*
 
 # Annoying NFS files on Apt
 *.nfs000000*
+
+# CMake
+build
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+CMakeScripts
+Makefile
+Testing
+CTestTestfile.cmake
+
+# gdb
+.gdb_history
+
+# Mac
+.DS_Store
+
+# Common temp files
+ibnet_out
+scripts/autorun_node_file
+gdb_history
