Save work (porting rc-swarm to C++)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,5 +81,6 @@ set(APP rc-swarm)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${APP})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${APP})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${APP})
-add_executable(main ${APP}/main.cc ${SOURCES})
+add_executable(main ${APP}/worker.cc ${APP}/main.cc ${SOURCES})
+#add_executable(main ${APP}/main.cc ${SOURCES})
 target_link_libraries(main ${GTEST_LIBRARIES} ${LIBRARIES})
