More porting to C++ style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,10 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 include_directories(${CMAKE_SOURCE_DIR})
 
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
+
 # Options exposed to the user
 option(PERF "Compile for performance" OFF)
 set(PGO "none" CACHE STRING "Profile-guided optimization (generate/use/none)")
@@ -73,15 +77,16 @@ else(LTO)
   MESSAGE(STATUS "LTO is disabled. Performance will be low.")
 endif(LTO)
 
-set(SOURCES
+set(HRD_SOURCES
   libhrd_cpp/hrd_conn.cc
   libhrd_cpp/hrd_util.cc)
 
-#set(APP rc-swarm)
-#set(APP rw-tput-receiver)
-set(APP atomics-sequencer)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${APP})
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${APP})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${APP})
-add_executable(main ${APP}/main.cc ${SOURCES})
-target_link_libraries(main ${GTEST_LIBRARIES} ${LIBRARIES})
+set(BENCHMARKS
+  rc-swarm
+  rw-tput-receiver
+  atomics-sequencer)
+
+foreach(bench IN LISTS BENCHMARKS)
+  add_executable(${bench} ${bench}/main.cc ${HRD_SOURCES})
+  target_link_libraries(${bench} ${GTEST_LIBRARIES} ${LIBRARIES})
+endforeach()
