Port ud-sender to C++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ set(BENCHMARKS
   rc-swarm
   rw-tput-receiver
   rw-tput-sender
+  ud-sender
   atomics-sequencer)
 
 foreach(bench IN LISTS BENCHMARKS)
